--- a/hello.yml
+++ b/hello.yml
@@ -1,17 +1,22 @@
-name: hello
+me: first
 
-on: [push]
+on: push
 
 jobs:
-  build:
-
+  job1:
+    name: first job
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+      -name: step1
+       uses: action/checkout@v2
+      -name: step2
+       run: env | sort
+
+  job2:
+    name: sec job
+    runs-on: windows-latest
+    steps:
+      -name: step1
+       uses: actions/checkout@v2 
+      -name: step2
+       run: "Get-childrenItem Env: | Sort-Object Name"
